--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 site_name: RNA-Seq Data Analysis
 site_author: Genomics Aotearoa & NeSI
 site_dir: public
-site_url: "https://genomicsaotearoa.github.io/RNA-seq-workshop/"
+site_url: "https://genomicsaotearoa.github.io/RNA-seq-workshop-on-demand/"
 
 #Repository information
 
-repo_name:   GenomicsAotearoa/RNA-seq-workshop 
-repo_url: https://github.com/GenomicsAotearoa/RNA-seq-workshop.git
+repo_name:   GenomicsAotearoa/RNA-seq-workshop-on-demand
+repo_url: https://github.com/GenomicsAotearoa/RNA-seq-workshop-on-demand
 
 
 theme:
