--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ theme:
     - navigation.sections
     - navigation.expand
     - navigation.top
+    - content.code.copy
 
   icon:
     admonition:
